--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "grunt": "^1.0.2",
     "ngx-dropzone-wrapper": "^5.3.5",
+    "ngx-toastr": "^8.8.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
